Exploratory data analysis

--- a/Notes.ipynb
+++ b/Notes.ipynb
@@ -63,12 +63,18 @@
     "- get artificial and natural objects (multiple datasets).\n",
     "- check object speed, sizes, accelaration, type approach date.\n",
     "- compare datasets from different years and different distances from Earth.\n",
-    "  \n",
     "- how does the different years of data compare to each other?\n",
-    "- how does the different distances from Earch compare?\n",
+    "- how does the different distances from Earth compare?\n",
     "- what are the most common objects in the above?\n",
     "- how does the objet density change?\n",
-    "- how does the dataset change in time?"
+    "- how does the dataset change in time?\n",
+    "- classify types of objects and debris.\n",
+    "- create a map, plot or visualisation of density of objects.\n",
+    "\n",
+    "- in orbit:\n",
+    "- can the number of space debris worsen in the future and become threatening?\n",
+    "- size of objects: small, medium, large?\n",
+    "- type of objects: debris, payload, rocket?"
    ]
   },
   {
