--- a/Earth Orbit Objects.ipynb
+++ b/Earth Orbit Objects.ipynb
@@ -1,37 +1,15 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 527,
-   "id": "6c590b4c-5f68-460d-a280-75f51fa53873",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# imports\n",
-    "import requests\n",
-    "from datetime import datetime\n",
-    "\n",
-    "import matplotlib.pyplot as plt\n",
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "import seaborn as sns\n",
-    "\n",
-    "from sklearn.linear_model import LinearRegression, LogisticRegression\n",
-    "\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.preprocessing import LabelEncoder, StandardScaler\n",
-    "from sklearn.metrics import mean_squared_error, accuracy_score\n",
-    "\n",
-    "# set the number display format\n",
-    "pd.set_option('display.float_format', '{:,.5f}'.format)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "006e072b-80ba-44bb-a955-3f8c602e767f",
    "metadata": {},
    "source": [
-    "## Earth Orbit and Close Approach Objects Analysis\r\n",
+    "## Earth Orbit and Close Approach Objects Analysis\n",
+    "\n",
+    "by: Nikolay Zhechev  \n",
+    "date: August 2024  \n",
+    "repository: https://github.com/nikolayzhechev/Earth-Orbit-Objects-Analysis-and-Prediction  \r\n",
     "\r\n",
     "### Introduction\r\n",
     "\r\n",
@@ -57,6 +35,32 @@
     "https://ssd-api.jpl.nasa.gov/doc/cad.html\n",
     "\n",
     "The below code snipped represents a GET request with query parameters for distance and time. We also save the response data to a CSV file with the corresponding fields."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 527,
+   "id": "6c590b4c-5f68-460d-a280-75f51fa53873",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# first include relevant dependencies\n",
+    "import requests\n",
+    "from datetime import datetime\n",
+    "\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import seaborn as sns\n",
+    "\n",
+    "from sklearn.linear_model import LinearRegression, LogisticRegression\n",
+    "\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.preprocessing import LabelEncoder, StandardScaler\n",
+    "from sklearn.metrics import mean_squared_error, accuracy_score\n",
+    "\n",
+    "# set the number display format\n",
+    "pd.set_option('display.float_format', '{:,.5f}'.format)"
    ]
   },
   {
